# Touhou-DanmakuReverseEng

./: CMakeLists.txt  LICENSE  README-JP.md  README.md  note.txt
assets/: player_tama.c
assets/originalFiles/: player_tama.xcf
include/: boss.h  config.h  game.h  hitbox.h  local-cordinate.h  main.h  player.h  screens.h  spellcard_base.h  sprite-base.h  tama.h  util.h
include/bosses/: demo.h
include/screens/: gameEnd.h  gamePlay.h  gameSetup.h  title.h
include/spell_cards/: demo.h
src/: CMakeLists.txt  boss.c  game.c  hitbox.c  local-cordinate.c  main.c  player.c  screens.c  sprite-base.c  tama.c  util.c
src/bosses/: demo.c
src/screens/: gameEnd.c  gamePlay.c  gameSetup.c  title.c
